--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
         "normalize.css": "^8.0.1",
+        "p5": "^1.4.2",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
-        "react-scripts": "^2.1.3"
+        "react-helmet": "^6.1.0",
+        "react-p5-wrapper": "^3.3.0",
+        "react-router-dom": "^6.4.1",
+        "react-script-tag": "^1.1.2",
+        "react-scripts": "^2.1.8"
     },
     "scripts": {
         "start": "react-scripts start",
